--- a/index.html
+++ b/index.html
@@ -40,7 +40,12 @@
             <label id="lbl7" for="t7" class="oculto"></label>
             <input id="t7" type="text" class="oculto">
 
-            <!--<button id="Calcular" class="oculto">Calcular</button>-->
+            <button id="Calcular1" class="oculto Calcular" onclick=calculoCargaPuntual()>Calcular</button>
+            <button id="Calcular2" class="oculto Calcular">Calcular</button>
+            <button id="Calcular3" class="oculto Calcular">Calcular</button>
+            <button id="Calcular4" class="oculto Calcular">Calcular</button>
+            <button id="Calcular5" class="oculto Calcular">Calcular</button>
+            <button id="Calcular6" class="oculto Calcular">Calcular</button>
         </div>
         <div class="column_derecha">
             <label id="lblr" for="respuesta" class="oculto">Respuesta</label>
